--- a/frontend/src/scss/blocks/_sidebar.scss
+++ b/frontend/src/scss/blocks/_sidebar.scss
@@ -110,3 +110,7 @@
     color: $text-secondary-color;
   }
 }
+
+.sidebar-add-item {
+  @include add-edit-item;
+}
